--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
-          submodules: true  # 如果你的主题是子模块，需要开启
+          submodules: 'recursive'  # 如果你的主题是子模块，需要开启
           fetch-depth: 0
 
       - name: Setup Hugo
